Cargando archivos HTML y CSS

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <title>Ahorcado</title>
+    <title>Ahorcado-Inicio</title>
 </head>
 
 <body>
@@ -18,10 +18,20 @@
             <img class="header_logo_img" src="src/imagenes/Logo.png" alt="Logo Alura">
     </header>
     <main>
-        <section class="main-exchange--index">
+        <section class="main-testarea">
+            <div class="main-testarea--button">
+                <textarea placeholder="Ingrese el texto aquí" wrap="soft" id="textField"></textarea>
+            </div>
+        </section>
+        <section class="main-exchange--main">
             <div class="main-container">
-                <div class="main-container--button"><button class="buttontop"><a class="boton-a" href="main.html">iniciar Juego</a></button></div>
-                <div class="main-container--button"><button class="buttonbotton"><a class="boton-b" href="#">Agregar nueva Palabra</a></button></div>
+                <div class="main-container--guardar"><button class="buttontop"><a class="boton-a" href="main.html">Guardar y empezar</a></button></div>
+                <div class="main-container--cancelar"><button class="buttonbotton"><a class="boton-b" href="index.html">Cancelar</a></button></div>
+            </div>
+        </section>
+        <section class="main-span">
+            <div class="main-span-vector">
+                <p class="main-vector"><span><img class="main-vector-icono" src="src/imagenes/Vector.svg" alt="Imagen de interrogante"></span>Máx. de 8 letras</p>
             </div>
         </section>
     </main>
