Cargando cambios de Screem media

--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/assets/styles/styles.css">
     <link href="src/assets/styles/tablet.css" rel="stylesheet" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="src/assets/styles/computer.css" media="screen and (min-width: 1024px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -24,10 +25,15 @@
             </div>
         </section>
         <section class="main-exchange--main">
-            <div class="main-container">
-                <div class="main-container--guardar"><button class="buttontop"><a class="boton-a" href="main.html">Guardar y empezar</a></button></div>
-                <div class="main-container--cancelar"><button class="buttonbotton"><a class="boton-b" href="index.html">Cancelar</a></button></div>
-            </div>
+            <!-- <div class="main-container"> -->
+                <div class="main-container--guardar">
+                    <button class="buttontop"><a class="boton-a" href="main.html">Guardar y empezar</a></button>
+                </div>
+                <div class="main-container--cancelar">
+                    <button class="buttonbotton">
+                    <a class="boton-b" href="index.html">Cancelar</a></button>
+                </div>
+            <!-- </div> -->
         </section>
         <section class="main-span">
             <div class="main-span-vector">
