Finalización screen 1024-1260-1600px

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/assets/styles/styles.css">
     <link href="src/assets/styles/tablet.css" rel="stylesheet" media="screen and (min-width: 768px)">
-    <link rel="stylesheet" href="src/assets/styles/computer.css" media="screen and (min-width: 1024px)
+    <link rel="stylesheet" href="src/assets/styles/computer.css" media="screen and (min-width: 1280px)">
+    <link rel="stylesheet" href="src/assets/styles/screem1600.css" media="screen and (min-width: 1600px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
