Se agrega código de JavaScript y nueva pág de juego

--- a/game.html
+++ b/game.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="src/assets/styles/computer.css" media="screen and (min-width: 1280px)">
     <link rel="stylesheet" href="src/assets/styles/screem1600.css" media="screen and (min-width: 1600px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <title>Ahorcado-Inicio</title>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <title>Ahorcado-Game</title>
 </head>
 
 <body>
     <header>
-        <img class="header_logo_img" src="src/imagenes/Logo.png" alt="Logo Alura">
+            <img class="header_logo_img" src="src/imagenes/Logo.png" alt="Logo Alura">
     </header>
     <main>
         <section class="main-testarea">
@@ -27,19 +27,18 @@
         </section>
         <section class="main-exchange--main">
             <!-- <div class="main-container"> -->
-            <div class="main-container--guardar">
-                <button class="buttontop"><a class="boton-a" href="main.html">Guardar y empezar</a></button>
-            </div>
-            <div class="main-container--cancelar">
-                <button class="buttonbotton">
+                <div class="main-container--guardar">
+                    <button class="buttontop"><a class="boton-a" href="main.html">Guardar y empezar</a></button>
+                </div>
+                <div class="main-container--cancelar">
+                    <button class="buttonbotton">
                     <a class="boton-b" href="index.html">Cancelar</a></button>
-            </div>
+                </div>
             <!-- </div> -->
         </section>
         <section class="main-span">
             <div class="main-span-vector">
-                <p class="main-vector"><span><img class="main-vector-icono" src="src/imagenes/Vector.svg"
-                            alt="Imagen de interrogante"></span>Máx. de 8 letras</p>
+                <p class="main-vector"><span><img class="main-vector-icono" src="src/imagenes/Vector.svg" alt="Imagen de interrogante"></span>Máx. de 8 letras</p>
             </div>
         </section>
     </main>
@@ -51,7 +50,7 @@
             </ul>
         </section>
     </footer>
-    <style></style>
+    <style src="src/assets/main.js"></style>
 </body>
 
 </html>
