--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -17,13 +17,13 @@
 
 <body>
     <header>
-            <img class="header_logo_img" src="src/imagenes/Logo.png" alt="Logo Alura">
+            <img class="header-logo--img" src="src/imagenes/Logo.png" alt="Logo Alura">
     </header>
     <main>
         <section class="main-exchange--index">
             <div class="main-container">
-                <div class="main-container--button"><button class="buttontop"><a class="boton-a" href="main.html">iniciar Juego</a></button></div>
-                <div class="main-container--button"><button class="buttonbotton"><a class="boton-b" href="#">Agregar nueva Palabra</a></button></div>
+                <div class="main-container--button"><button class="buttontop"><a class="boton-a" href="start.html">iniciar Juego</a></button></div>
+                <div class="main-container--button"><button class="buttonbotton"><a class="boton-b" href="main.html">Agregar nueva Palabra</a></button></div>
             </div>
         </section>
     </main>
