--- a/start.html
+++ b/start.html
@@ -22,7 +22,7 @@
         <img class="main-image--change" id="image" src="src/imagenes/ahorcado/img0.png" alt="Ahorcado" />
         <div class="container-word--guess">
             <p id="word-guess"></p>
-            <button class="main-container--button buttonbotton" id="start-game">Palabra aleatoria</button>
+            <button class="main-container--button buttontop" id="start-game">Palabra aleatoria</button>
             <p id="result"> </p>
             <div class="container-letters" id="letters">
                 <button>a</button>
@@ -53,6 +53,7 @@
                 <button>y</button>
                 <button>z</button>
             </div>
+            <button style="top: -15px;" class="buttonbotton"><a class="boton-b" id="end-game" href="index.html">Salir</a></button>
         </div>
     </main>
     <footer>
