Corrección boton y screem 728++

--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
     <link rel="stylesheet" href="src/assets/styles/computer.css" media="screen and (min-width: 1280px)">
     <link rel="stylesheet" href="src/assets/styles/screem1600.css" media="screen and (min-width: 1600px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <title>Ahorcado</title>
 </head>
 
 <body>
     <header>
-            <img class="header-logo--img" src="src/imagenes/Logo.png" alt="Logo Alura">
+        <img class="header-logo--img" src="src/imagenes/Logo.png" alt="Logo Alura">
     </header>
     <main>
         <section class="main-exchange--index">
             <div class="main-container">
-                <div class="main-container--button"><button class="buttontop"><a class="boton-a" href="start.html">iniciar Juego</a></button></div>
-                <div class="main-container--button"><button class="buttonbotton"><a class="boton-b" href="main.html">Agregar nueva Palabra</a></button></div>
+                <div class="main-container--button"><button class="buttontop"><a class="boton-a"
+                            href="start.html">iniciar Juego</a></button></div>
+                <div class="main-container--button"><button class="buttonbotton"><a class="boton-b"
+                            href="main.html">Agregar nueva Palabra</a></button></div>
             </div>
         </section>
     </main>
