Se agrego un p y keyframes

--- a/start.html
+++ b/start.html
@@ -21,7 +21,7 @@
     <main class="main-start-game">
         <img class="main-image--change" id="image" src="src/imagenes/ahorcado/img0.png" alt="Ahorcado" />
         <div class="container-word--guess">
-            <p id="word-guess"></p>
+            <p id="word-guess">--Preciona el botón para iniciar--</p>
             <p id="result"> </p>
             <div class="container-letters" id="letters">
                 <button>a</button>
