Cargando archivos java e imagenes

--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
         <section class="main-exchange--main">
             <!-- <div class="main-container"> -->
             <div class="main-container--guardar">
-                <button class="buttontop"><a class="boton-a" href="main.html">Guardar y empezar</a></button>
+                <button class="buttontop" id="buttonSave" onclick="buttonEvent(copyArray)"><a class="boton-a" href="#">Guardar y empezar</a></button>
             </div>
             <div class="main-container--cancelar">
                 <button class="buttonbotton">
@@ -51,7 +51,7 @@
             </ul>
         </section>
     </footer>
-    <style></style>
+    <style src="src/assets/buttonEvent.js"></style>
 </body>
 
 </html>
