--- a/start.html
+++ b/start.html
@@ -21,39 +21,39 @@
     <main class="main-start-game">
         <img class="main-image--change" id="image" src="src/imagenes/ahorcado/img0.png" alt="Ahorcado" />
         <div class="container-word--guess">
-            <p id="word-guess">--Preciona el botón para iniciar--<br>"Palabra aleatoria"</p>
+            <p id="word-guess">--Preciona el botón para iniciar--<br>"Iniciar Juego"</p>
             <p id="result"> </p>
             <div class="container-letters" id="letters">
-                <button>a</button>
-                <button>b</button>
-                <button>c</button>
-                <button>d</button>
-                <button>e</button>
-                <button>f</button>
-                <button>g</button>
-                <button>h</button>
-                <button>i</button>
-                <button>j</button>
-                <button>k</button>
-                <button>l</button>
-                <button>m</button>
-                <button>n</button>
-                <button>ñ</button>
-                <button>o</button>
-                <button>p</button>
-                <button>q</button>
-                <button>r</button>
-                <button>s</button>
-                <button>t</button>
-                <button>u</button>
-                <button>v</button>
-                <button>w</button>
-                <button>x</button>
-                <button>y</button>
-                <button>z</button>
+                <button>A</button>
+                <button>B</button>
+                <button>C</button>
+                <button>D</button>
+                <button>E</button>
+                <button>F</button>
+                <button>G</button>
+                <button>H</button>
+                <button>I</button>
+                <button>J</button>
+                <button>K</button>
+                <button>L</button>
+                <button>M</button>
+                <button>N</button>
+                <button>Ñ</button>
+                <button>O</button>
+                <button>P</button>
+                <button>Q</button>
+                <button>R</button>
+                <button>S</button>
+                <button>T</button>
+                <button>U</button>
+                <button>V</button>
+                <button>W</button>
+                <button>X</button>
+                <button>Y</button>
+                <button>Z</button>
             </div>
             <div class="container-button--startend">
-                <button class="main-container--start" id="start-game">Palabra aleatoria</button>
+                <button class="main-container--start" id="start-game">Iniciar Juego</button>
                 <button class="main-container--end"><a id="end-game" href="index.html">Salir</a></button>
             </div>
         </div>
@@ -67,6 +67,8 @@
         </section>
     </footer>
     <script src="src/assets/iniciar jugar/game.js"></script>
+    <script src="src/assets/iniciar jugar/function.js"></script>
+    <script src="src/assets/iniciar jugar/index.js"></script>
 </body>
 
 </html>
