Corrección al cargar problemas, solucion al cambiar un punto

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <img class="header_logo_img" src="src/imagenes/Logo.png" alt="Logo Alura">
-        <ul class="ul-palabra-anhadidas">
+        <ul class="ul-palabras-anhadidas">
             <li class=".li-palabras-anhadidas"></li>
         </ul>
     </header>
@@ -56,7 +56,6 @@
     </footer>
     <script src="src/assets/buttonEvent.js"></script>
     <script src="src/assets/iniciar jugar/index.js"></script>
-    <style src="src/assets/iniciar jugar/game.js"></style>
 </body>
 
 </html>
