Se añadio boton de borrar y se corrigio el responsive

--- a/main.html
+++ b/main.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="src/assets/styles/styles.css">
     <link href="src/assets/styles/tablet.css" rel="stylesheet" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="src/assets/styles/computer.css" media="screen and (min-width: 1280px)">
-    <link rel="stylesheet" href="src/assets/styles/screem1600.css" media="screen and (min-width: 1600px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -29,6 +28,12 @@
             </div>
         </section>
         <section class="main-exchange--main">
+            <section class="main-span">
+                <div class="main-span-vector">
+                    <p class="main-vector"><span><img class="main-vector-icono" src="src/imagenes/Vector.svg"
+                                alt="Imagen de interrogante"></span>Máx. 12 letras</p>
+                </div>
+            </section>
             <!-- <div class="main-container"> -->
             <div class="main-container--guardar" id="containerSave">
                 <button type="submit" class="buttontop" id="buttonSave"><a class="boton-a" href="#">Guardar</a></button>
@@ -37,13 +42,11 @@
                 <button class="buttonbotton" id="buttonGame">
                     <a class="boton-b" href="start.html">Ir al Juego</a></button>
             </div>
-            <!-- </div> -->
-        </section>
-        <section class="main-span">
-            <div class="main-span-vector">
-                <p class="main-vector"><span><img class="main-vector-icono" src="src/imagenes/Vector.svg"
-                            alt="Imagen de interrogante"></span>Máx. 8 letras</p>
+            <div class="main-container--borrar">
+                <button class="buttonbotton" id="button-reset"><a id="buttonreset" class="boton-b"
+                        href="main.html">Borrar palabras</a></button>
             </div>
+            <!-- </div> -->
         </section>
     </main>
     <footer>
