--- a/start.html
+++ b/start.html
@@ -14,7 +14,7 @@
     <title>Ahorcado</title>
 </head>
 
-<body>
+<body id="bodyStart">
     <header>
         <img class="header-logo--img" src="src/imagenes/Logo.png" alt="Logo Alura">
     </header>
